added media queries for side bar

--- a/assets/css/media.css
+++ b/assets/css/media.css
@@ -23,4 +23,14 @@
         flex: 1 0 0;
     }
 
+    /* below is the side bar adjustments */
+    .icon-img {
+        position: absolute;
+        top: 0px;
+        left: -4000px;
+    }
+
+    .day-img {
+        width: 100%;
+    }
 }
