--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -164,3 +164,13 @@ footer ul li a:hover {
 }
 
 
+/* below are the styles for mercury page  */
+
+.credit-to {
+    font-size: 11px;
+    font-weight: lighter;
+}
+
+.mercury-paragragh {
+    text-indent: 2em;
+}
