--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -228,8 +228,8 @@ footer ul li a:hover {
 }
 
 .game {
-    width: 500px;
-
+    width: 500px; 
+}
 /* below are the styles for mercury page  */
 .mercury-header {
     margin-bottom: 10px;
