--- a/assets/css/media.css
+++ b/assets/css/media.css
@@ -9,6 +9,13 @@
         flex: 1 0 0;
     }
 
+    /* below are the styles for the mercury page  */
+    .mercury-iframe {
+        position: absolute;
+        top: 0px;
+        left: -5000px;
+    }
+    
     .flight-img-placement {
         display: flex;
         flex-direction: column;
