creators show up on page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -280,3 +280,13 @@ footer ul li a:hover {
 .mercury-links {
     margin: 15px;
 }
+
+/* below are the creators page styles  */
+/* .creator-wrapper {
+    padding: 5px;
+    margin: 15px;
+} */
+
+.quote-style {
+    
+}
