--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -282,11 +282,11 @@ footer ul li a:hover {
 }
 
 /* below are the creators page styles  */
-/* .creator-wrapper {
-    padding: 5px;
-    margin: 15px;
-} */
+.creator-flex {
+    display: flex;
+    flex-wrap: wrap;
+}
 
 .quote-style {
-    
+    width: 60%;
 }
