cleaned up file tree and code

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -235,6 +235,8 @@ footer ul li a:hover {
     vertical-align: middle;
 }
 
+
+/* below are styles for invader game  */
 .game {
     width: 100%;
 }
